# OpenTrace

./: .gitignore  CMakeLists.txt  README.md  pom.xml
init/: InitializationManager.cpp  InitializationManager.h
init/configManager/: ConfigManager.cpp  ConfigManager.h
init/fileSystem/: FileSystem.cpp  FileSystem.h
main-server/: pom.xml
main-server/src/main/java/com/opentrace/server/: OpenTraceApplication.java
main-server/src/main/java/com/opentrace/server/properties/: GoogleAuthProperties.java  JwtProperties.java
main-server/src/main/java/com/opentrace/server/repositories/: RolePermissionRepository.java
main-server/src/main/java/com/opentrace/server/services/: SearchService.java  UserService.java
main-server/src/main/resources/: application.properties
main-server/src/test/java/com/opentrace/server/: OpenTraceApplicationTests.java
main-server/src/test/java/com/opentrace/server/services/: RolePermissionServiceTest.java
pool-server/: pom.xml
pool-server/src/main/java/com/opentrace/pool/: PoolApplication.java
pool-server/src/main/java/com/opentrace/pool/configs/: ConfigManager.java  ConfigRetrieverFactory.java
pool-server/src/main/java/com/opentrace/pool/handlers/: StratumSocketHandler.java
pool-server/src/main/resources/: config.json
pool-server/src/test/java/com/opentrace/pool/: PoolApplicationTest.java
server/: pom.xml
server-main/: pom.xml
server/src/main/java/com/opentrace/server/: OpenTraceApplication.java
server/src/main/resources/: application.properties
shared-lib/: pom.xml
tests/: main_test.cpp
(+175 files in other folders)
